--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* *{
+ /* *{
     margin: 0;
     padding: 0;
 } */
@@ -58,6 +58,7 @@ header li:hover{
     }
 
     nav{
+        display: flex;
         justify-content: flex-start;
         align-items: flex-start;
         border-bottom: solid #5f99cf;
@@ -67,7 +68,7 @@ header li:hover{
 
     nav ul{
         margin: 0;
-       
+       display: flex;
         list-style: none;
         
         
@@ -75,10 +76,15 @@ header li:hover{
 
     nav > div > ul > li{
         display: inline;
+        justify-content: start;
         font-size: 22px;
         font-family: verdana;
         background-color: #fbfbfb;
         font-weight: bold;
+        margin-left: .1em;
+        margin-right: .1em;
+        padding-left: .3em;
+        padding-right: .3em;
     }
 
     .user-profile{
@@ -97,8 +103,138 @@ margin-top: 30px;
     
         display: inline;
         list-style: none;
-        
+        font-size: 20px;
+        margin-left: .1em;
+        margin-right: .1em;
+        padding-left: .3em;
+        padding-right: .3em;
+
+
+    }
+    /* Arrow */
+    .post{
+        display: flex;
+        justify-content: flex-start;
+    }
     
+    .post-upvotes{
+        text-align: center;
+        font-size: 20px;
+        color: dodgerblue;
+    }
+    .arrow-up{
+        margin-top: 18px;
+      color: green;
+        transform: rotate(0deg);
+    }
+    #votes{
+        color: darkorange;
+    }
+    .arrow-down{
+      color: blue;
+        transform: rotate(0deg);
+    }
+
+ 
+    /* post */
+    .post-body{
+        margin-left: 1em;
+        margin-top: 50px;
+    }
+
+    
+.submit-link{
+    
+    text-decoration: none;
+}
+
+.post-option{
+    columns: dodgerblue;
+    background-color: aquamarine;
+    justify-content: center;
+    font-weight: bold;
+    margin-bottom: 2em;
+}
+
+.reddit-gold{
+    justify-content: end;
+
+    margin-top: 2.5em;
+   float: right;
+
+    text-align: center;
+    border:  solid rgb(219, 289, 181);
+  border-width: thin;
+  width: 80%;
+
+}
+
+.reddit-gold div{
+    font-size: 20px;
+    font-weight: 0;
+    padding-top: 1em;
+    color: rgb( 100, 100, 80);
+}
+
+.bar-container{
+    margin-right: 40px;
+    margin-bottom: 1em;
+}
 
 
+.bar{
+     
+    border-radius: 10px;
+    background-color: #f3f287;
+    width: 100%;
+ 
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+
+
+.gold-percent{
+    font-weight: bold;
+    color: black;
+    }
+
+    
+.reddit-gold-support{
+    background-color: whitesmoke;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    color: rgb(100, 100, 80);
+    box-shadow: 5px 5px 5px 5px #888888;
+    
+    }
+
+
+    .user-action-button{
+        background-color: #def2ff;
+        height: 3em;
+        margin-top: .25em;
+        font-size: 20px;
+        border: solid #4682b4;
+        border-radius: 5px;
+        width: 100;
+        display: block;
+        /* float: right; */
+        }
+
+        
+
+
+.user-action-button:hover{
+    background-color: #3A5ECA;
+    color: whitesmoke;
+    }
+
+    
+.part2{
+ display: flex;
+ justify-content: center;
+ 
+  
+    
     }
